--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
     <link rel="shortcut icon"
         href="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg"
         type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <div class="loader">
+        <h1>ENVIRONMENTS</h1>
+        <h1>EXPERIENCE</h1>
+        <h1>CONTENT</h1>
+    </div>
     <div class="fixed-image"></div>
-
+    <div class="full-scr">
+        <div class="full-div1">
+            <h2>WORK</h2>
+            <h2>STUDIO</h2>
+            <h2>CONTACT</h2>
+        </div>
+    </div>
     <div class="main">
 
         <div class="paje1">
@@ -28,6 +39,11 @@
                     <h4><a href="">Studio</a></h4>
                     <h4><a href="">Contact</a></h4>
                 </div>
+                <div class="menu-div">
+                    <i class="ri-menu-line"></i>
+                    <h3 class="menu">Menu</h3>
+                </div>
+
             </nav>
 
             <div class="center">
@@ -102,42 +118,130 @@
 
             </div>
         </div>
-
         <div class="paje3">
+            <div class="fea-pro">
+                <div class="dot"></div>
+                <h2>FEATURED PROJECTS</h2>
+            </div>
             <div class="elem-container">
                 <div class="elem elem1"
                     data-image="https://plus.unsplash.com/premium_photo-1664304354144-9201500b8aeb?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5NHx8fGVufDB8fHx8fA%3D%3D">
-                    <div class="overlay"></div>
+                    <div class="overlay">
+                        <img src="50th.png" class="images">
+                    </div>
                     <h2>50th Anninversary</h2>
                 </div>
                 <div class="elem elem2"
                     data-image="https://images.unsplash.com/photo-1716369414930-bcdc1565fa3c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDB8fHxlbnwwfHx8fHw%3D">
-                    <div class="overlay"></div>
+                    <div class="overlay">
+                        <video autoplay loop muted src="conversesoho.mp4" class="videos"></video>
+                    </div>
                     <h2>Converse Soho</h2>
                 </div>
                 <div class="elem elem3"
                     data-image="https://plus.unsplash.com/premium_photo-1673512198690-6439132f3187?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5OHx8fGVufDB8fHx8fA%3D%3D">
-                    <div class="overlay"></div>
+                    <div class="overlay">
+                        <video autoplay loop muted src="super_bowl.mp4" class="videos"></video>
+                    </div>
                     <h2>Kelce Super Bowl Party</h2>
                 </div>
                 <div class="elem elem4"
                     data-image="https://images.unsplash.com/photo-1716319487463-b3d0ea7f3d47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDd8fHxlbnwwfHx8fHw%3D">
-                    <div class="overlay"></div>
+                    <div class="overlay">
+                        <video autoplay loop muted src="capezio.mp4" class="videos"></video>
+                    </div>
                     <h2>Capezio NYC Flagship</h2>
                 </div>
                 <div class="elem elem5"
                     data-image="https://images.unsplash.com/photo-1715144537200-97cac9c8fb5b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDl8fHxlbnwwfHx8fHw%3D">
-                    <div class="overlay"></div>
+                    <div class="overlay">
+                        <video autoplay loop muted src="afterpay.mp4" class="videos"></video>
+                    </div>
                     <h2>Play New Kidvision</h2>
                 </div>
                 <div class="elem elem6"
                     data-image="https://images.unsplash.com/photo-1716220982197-b8e8439ed096?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMTZ8fHxlbnwwfHx8fHw%3D">
-                    <div class="overlay"></div>
+                    <div class="overlay">
+                        <img src="nike.png" class="images">
+                    </div>
                     <h2>Makers Studio HOI</h2>
                 </div>
             </div>
         </div>
+        <div class="paje35">
+            <div class="nav-part2 allproject">
+                <h4><a href="">All Project</a></h4>
+            </div>
+            <video autoplay loop muted src="video2.mp4"></video>
+        </div>
+        <div class="paje4">
+            <div class="work fea-pro">
+                <div class="dot"></div>
+                <h2>
+                    WHOM WE WORK WITH
+                </h2>
+            </div>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide slider-main_wrapper">
+                        <img
+                            src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b15ff_Nike.svg">
+                        <div>
+                            <p>Retained Production support across retail and events in NY, CHI, LA. Creative Design,
+                                Design Management,
+                                Production/Project Management, and execution of work from concept to installation across
+                                the Country.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide slider-main_wrapper">
+                        <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b1600_Converse.svg"
+                            alt="">
+                        <p>Creative Concepting, Design, Design Management, Project Management, and execution of work
+                            from concept to installation
+                            across the Country. Cross functional communication and management of third party partners.
+                        </p>
+                    </div>
+                    <div class="swiper-slide slider-main_wrapper">
+                        <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b15fd_Arc%E2%80%99teryx.svg"
+                            alt="">
+                        <p>Production and design along with install oversight and execution support for the SoHo store
+                            opening on Broadway St, New
+                            York. Also working on creative and production work for a new store opening in Glendale,
+                            California.</p>
+                    </div>
+                    <div class="swiper-slide slider-main_wrapper">
+                        <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b15fe_Hunter.svg"
+                            alt="">
+                        <p>Design and Production partner for Hunter Holiday 2022 Pop-in at Nordstrom 57th St, New York,
+                            including activations in
+                            Women’s, Men’s and Kid’s zones. Thirty-five (35) additional smaller take-downs in Nordstrom
+                            stores across the US.
+                            Concept design for Holiday boot customization events in stores across winter 2022.</p>
+                    </div>
+                    <div class="swiper-slide slider-main_wrapper">
+                        <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b1601_MediaLink.svg"
+                            alt="">
+                        <p>Creative, Design, and Production Partner for 2023 CES. Scope Included creation of Branding
+                            Identity, Assets, and Digital
+                            Content, Design, Production design, Production oversight and Installation of client
+                            activations for IBM, Delta,
+                            Instacart, and more.</p>
+                    </div>
+                    <div class="swiper-slide slider-main_wrapper">
+                        <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b1602_AfterPay.svg"
+                            alt="">
+                        <p>Creative, Design, and Production Partner for 2022 NY Fashion Week Pop-Up space. In
+                            Partnership with B-Reel scope
+                            including creation of Final Design, Design Assets, 3D Renders, Production design,
+                            Production/Partner oversight and
+                            creation of a two (2) story pop-up for Afterpay’s clients such as Crocs, JD Sports,
+                            Container Store, &amp; Revolve.</p>
+                    </div>
 
+                </div>
+
+            </div>
+        </div>
 
     </div>
     <div class="paje5">
@@ -145,8 +249,17 @@
     </div>
 
     <div class="footer">
+        <div class="back-circle bk1 bkc"></div>
+        <div class="back-circle bk2 bkc"></div>
+        <div class="back-circle bk3 bkc"></div>
+        <div class="back-circle bk5 bkc"></div>
+        <div class="back-circle bk4 bkc"></div>
+        <div class="back-circle bk6 bkc"></div>
+        <div class="back-circle bk7 bkc"></div>
+        <div class="back-circle bk8 bkc"></div>
+
         <div class="footer-top">
-            <div class="footer-top-left">
+            <div class="footer-top-left lnk">
                 <h2>Work</h2>
                 <h2>Studio</h2>
                 <h2>Contact</h2>
@@ -164,18 +277,28 @@
                 </div>
             </div>
         </div>
-        <h1>Sundown</h1>
+        <!-- <div class="spacer"></div> -->
+        <div class="sundown">
+            <h1>Sundown</h1>
+        </div>
         <div class="footer-bottom">
-
-            <h4>Copyright © Sundown Studio</h4>
-            <h4>Brooklyn, NY</h4>
-            <h4>Instagram</h4>
-            <h4>LinkedIn</h4>
+            <div class="last lnk">
+                <h4>Copyright © Sundown Studio</h4>
+            </div>
+            <div class="last lnk">
+                <h4>Brooklyn, NY</h4>
+            </div>
+            <div class="last lnk">
+                <h4>Instagram</h4>
+            </div>
+            <div class="last lnk">
+                <h4>LinkedIn</h4>
+            </div>
 
         </div>
+
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
